--- a/assets/js/Components/CharacterSelect/style.css
+++ b/assets/js/Components/CharacterSelect/style.css
@@ -15,6 +15,11 @@
 }
 
 .character-select-power-level{
-    color: #DDCB59;
+    color: var(--bungie-power);
     margin-left: auto;
+}
+
+.card-list{
+    margin: 0;
+    padding: 10;
 }
