--- a/assets/js/Components/PGCR/style.css
+++ b/assets/js/Components/PGCR/style.css
@@ -111,6 +111,9 @@
 }
 
 .activity-list-wrapper{
+    display: flex;
+    flex-direction: column;
+    align-self: center;
     width: 600px;
     border: 1xp solid var(--crucible-dark-2);
     background-color: var(--grey-dark-4);
